--- a/css/tabs.css
+++ b/css/tabs.css
@@ -3,40 +3,67 @@
 }
 
     .l_tabs_container > div {
+        box-sizing: border-box;
         width: 100%;
     }
 
-.l_tab_button {
-    border: 0;
-    box-sizing: border-box;
-    display: inline-block;
-    font-weight: bold;
-    overflow: hidden;
-    padding: 6px 12px;
-    position: relative;
-    text-overflow: ellipsis;
-    transition: border .25s;
-    width: 100px;
+.l_tab_buttons_container {
+    white-space: nowrap;
 }
 
+.l_tab_button {
+    border-top: 2px solid transparent; /* Border's width is equal to tab's border-width */
+    border-left: 2px solid #aaa; /* Border's width is equal to tab's border-width */
+    box-shadow: none;
+    display: inline-block;
+    position: relative;
+    transition: border .25s, box-shadow .25s;
+}
+
+    .l_tab_button:last-child {
+        border-right: 2px solid #aaa; /* Border's width is equal to tab's border-width */
+    }
+
     .l_tab_button.active {
-        /* Border's width is equal to tab's border-width */
-        border: 2px solid #aaa;
-        border-bottom: 0;
+        border-top-color: #aaa;
+        box-shadow: 0 -2px 5px #aaa;
     }
 
-    .l_tab_button.active:after {
-        background: #fff;
-        /* Height is equal to tab's border-width */
-        height: 2px;
-        position: absolute;
-        width: 100%;
+        .l_tab_button.active:after {
+            background: #fff;
+            content: '';
+            height: 2px; /* Height is equal to tab's border-width */
+            left: 0;
+            position: absolute;
+            top: 100%;
+            width: 100%;
+            z-index: 2;
+        }
+
+    .l_tab_button > button {
+        box-sizing: border-box;
+        display: inline-block;
+        font-weight: bold;
+        overflow: hidden;
+        padding: 6px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 100px;
     }
 
-.l_tab {
+.l_tab_wrapper {
     border: solid;
     border-image: linear-gradient(to bottom, #aaa, #00000000, #00000000, #aaa) 1;
     border-width: 2px;
-    box-sizing: border-box;
+    display: none;
     padding: 12px;
+}
+
+    .l_tab_wrapper.active {
+        display: block;
+    }
+
+.l_tab {
+    box-sizing: border-box;
+    width: 100%;
 }
