--- a/css/button.css
+++ b/css/button.css
@@ -1,4 +1,4 @@
-.l_gui_button {
+.l_button {
 	background: #555;
 	border-radius: 3px;
 	color: #ddd;
@@ -6,20 +6,20 @@
 	font-weight: bold;
     min-height: 28px;
 	padding: 6px 12px;
-	transition: .2s;
+	transition: .1s;
 	transition-property: background, color, transform;
 }
 
-	.l_gui_button:hover {
+	.l_button:hover {
 		background: #aaa;
 		color: #333;
 	}
 
-    .l_gui_button:active {
+    .l_button:active {
         transform: translate(1px, 1px);
     }
 
-    .l_gui_button:disabled {
+    .l_button:disabled {
         background: #ddd;
         color: #aaa;
     }
