Lib is now sassy

--- a/css/close_button.css
+++ b/css/close_button.css
@@ -1,33 +1,1 @@
-.l_close {
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-}
-
-    .l_close > span,
-    .l_close > span:before,
-    .l_close > span:after {
-        content: '';
-        display: block;
-        position: absolute;
-        width: inherit;
-        height: 2px;
-        background: #444;
-        border-radius: 1px;
-    }
-
-    .l_close > span {
-        background: transparent;
-    }
-
-        .l_close > span:before {
-            -webkit-transform: rotate(45deg);
-            -ms-transform: rotate(45deg);
-            transform: rotate(45deg);
-        }
-
-        .l_close > span:after {
-            -webkit-transform: rotate(-45deg);
-            -ms-transform: rotate(-45deg);
-            transform: rotate(-45deg);
-        }
+.l_close > span:after,.l_close > span:before,.l_close > span{background:#555;border-radius:1px;content:"";display:block;height:2px;position:absolute;width:inherit}.l_close{cursor:pointer;height:30px;width:30px}.l_close > span{background:transparent}.l_close > span:before{transform:rotate(45deg)}.l_close > span:after{transform:rotate(-45deg)}
