--- a/css/sandwich_button.css
+++ b/css/sandwich_button.css
@@ -1,47 +1,1 @@
-.l_sandwich {
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-}
-
-    .l_sandwich > span,
-    .l_sandwich > span:before,
-    .l_sandwich > span:after {
-        content: '';
-        display: block;
-        position: absolute;
-        width: 30px;
-        height: 2px;
-        background: #fff;
-        border-radius: 1px;
-        transition: all .25s ease-in-out;
-    }
-
-    .l_sandwich > span:before {
-        top: -10px;
-    }
-
-    .l_sandwich > span:after {
-        top: 10px;
-    }
-
-.l_sandwich.active > span {
-    background: transparent;
-}
-
-    .l_sandwich.active > span:before,
-    .l_sandwich.active span:after {
-        top: 0;
-    }
-
-    .l_sandwich.active > span:before {
-        -webkit-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-        transform: rotate(45deg);
-    }
-
-    .l_sandwich.active > span:after {
-        -webkit-transform: rotate(-45deg);
-        -ms-transform: rotate(-45deg);
-        transform: rotate(-45deg);
-    }
+.l_sandwich > span:after,.l_sandwich > span:before,.l_sandwich > span{background:#555;border-radius:1px;content:"";display:block;height:2px;position:absolute;transition:all .3s;width:inherit}.l_sandwich{cursor:pointer;height:30px;width:30px}.l_sandwich > span:before{top:-10px}.l_sandwich > span:after{top:10px}.l_sandwich.active > span{background:transparent}.l_sandwich.active > span:before{top:0;transform:rotate(45deg)}.l_sandwich.active > span:after{top:0;transform:rotate(-45deg)}
