--- a/css/dialog.css
+++ b/css/dialog.css
@@ -1,71 +1,1 @@
-.l_dialog {
-    align-items: center;
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    left: 0;
-    opacity: 0;
-    position: fixed;
-    top: 0;
-    transition-duration: .2s;
-    transition-property: opacity, visibility;
-    visibility: hidden;
-    width: 100%;
-    z-index: 100;
-}
-
-    .l_dialog.active {
-        opacity: 1;
-        visibility: visible;
-    }
-
-.l_dialog .l_close {
-    width: 20px;
-}
-
-.l_dialog .l_close {
-    position: absolute;
-    right: 4px;
-    top: 0;
-}
-
-.l_dialog .back {
-    background: #000;
-    height: 100%;
-    opacity: .5;
-    position: absolute;
-    width: 100%;
-    z-index: -1;
-}
-
-.l_dialog .wrapper {
-    background: #efefef;
-    border-radius: 3px;
-    box-sizing: border-box;
-    min-height: 54px;
-    max-height: 400px;
-    padding: 12px;
-    position: relative;
-    width: 300px;
-}
-
-.l_dialog .title:not(:empty) {
-    border-bottom: 1px solid;
-    border-image: linear-gradient(to right, #555, #efefef) 1;
-    font-weight: bold;
-    margin-bottom: 27px;
-    overflow: hidden;
-    padding-bottom: 3px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    width: 80%;
-}
-
-.l_dialog .buttons {
-    margin-top: 27px;
-    text-align: center;
-}
-
-.l_dialog .l_button {
-    margin: 0 6px;
-}
+.l_dialog{align-items:center;display:flex;justify-content:center}.l_dialog{opacity:0;transition:opacity .2s,visibility .2s;visibility:hidden}.active.l_dialog{opacity:1;visibility:visible}.l_dialog{left:0;position:fixed;top:0}.l_dialog .l_close,.l_dialog .back{left:0;position:absolute;top:0}.l_dialog .back{height:100%;width:100%}.l_dialog{height:100%;width:100%;z-index:100}.l_dialog .l_close{right:4px;width:20px}.l_dialog .back{background:#000;opacity:.5;z-index:-1}.l_dialog .wrapper{background:#efefef;border-radius:3px;box-sizing:border-box;min-height:54px;max-height:400px;padding:12px;position:relative;width:300px}.l_dialog .title:not(:empty){border-bottom:1px solid;border-image:linear-gradient(to right, #555, #efefef) 1;font-weight:bold;margin-bottom:27px;overflow:hidden;padding-bottom:3px;text-overflow:ellipsis;white-space:nowrap;width:80%}.l_dialog .buttons{margin-top:27px;text-align:center}.l_dialog .l_button{margin:0 6px}
