Fixed a bug with ConfirmationDialog and improved SASS

--- a/sass/const/media_width.scss
+++ b/sass/const/media_width.scss
@@ -5,6 +5,6 @@
 $DESKTOP_WIDTH: 1281px;
 $LAPTOP_WIDTH: 1025px;
 $TABLET_WIDTH: 961px;
-$TABLET_SMALL_WIDTH: 641px;
+$SMALL_TABLET_WIDTH: 641px;
 $MOBILE_WIDTH: 481px;
-$MOBILE_SMALL_WIDTH: 320px;
+$SMALL_MOBILE_WIDTH: 320px;
