--- a/sass/src/dialog.scss
+++ b/sass/src/dialog.scss
@@ -4,19 +4,19 @@
 .l_dialog {
     @extend %flex_center;
     @extend %fadeable;
-    @extend %fixed_position;
-    height: 100%;
-    width: 100%;
+    @include fixed_position(0, 0);
+    @include size(100%, 100%);
     z-index: 100;
 
     .l_close {
-        @extend %absolute_position;
+        @include absolute_position(0, null);
         right: 4px;
         width: 20px;
     }
 
     .back {
-        @extend %absolute_position_full;
+        @include absolute_position(0, 0);
+        @include size(100%, 100%);
         background: #000;
         opacity: .5;
         z-index: -1;
